// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-data-type should delete a data type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-data-type should handle non-existent data type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
